# allSortsOfThings

./: CMakeLists.txt
include/: C++11Features.h  SpecialContainer.h  SpecialContainer.inl  TemplateRequires.h  TemplateRequires.inl  Templates.h  Templates.inl
src/: Any.cpp  BoostCommandParser.cpp  Optional.cpp  SpecialContainer.cpp  Templates.cpp  Variant.cpp  main.cpp
tests/: CMakeLists.txt  test_Something.cpp
